# enterprise-rag-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_init_db.py
app/: main.py  schemas.py
app/api/: deps.py  routes.py
app/core/: config.py
app/db/: init_db.py  models.py
app/llm/: base.py  local_provider.py  openai_provider.py
app/rag/: chunker.py  embedding.py  ingestion.py  retriever.py  vector_store.py
app/services/: query_service.py
app/static/: index.html
datasets/rag/: golden_set.json
docs/architecture/: overview.md
docs/decisions/: adr.md
docs/evaluation/: methodology.md
eval/: __init__.py  ragas_eval.py
tests/: conftest.py  test_chunker.py  test_query_service.py  test_retriever.py  test_schemas.py
