[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Project 1: Enterprise RAG Platform (boilerplate + first steps)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-multipart>=0.0.9",
  "SQLAlchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "pgvector>=0.3",
  "pypdf>=4.3",
  "openai>=1.30",
  "tenacity>=8.3",
  # #6 OCR fallback for scanned PDFs (system deps already in Dockerfile)
  "pytesseract>=0.3.10",
  "pdf2image>=1.17",
  # #11 Local model provider (Ollama HTTP client)
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
